chore(响应式): 添加对 Vue 响应式的解释

--- a/响应式原理的实现/简单总结.md
+++ b/响应式原理的实现/简单总结.md
@@ -2,6 +2,12 @@
 
 ## 1. 什么是响应式
 
+### 一句话解释 Vue 的响应式
+
+当数据发生变化时，相关的界面会自动更新以响应这些变化，而无需手动操作 DOM。
+
+从本质上来说，其实是 Vue2 通过 Object.defineProperty()，Vue3 通过 Proxy 拦截对数据的访问来追踪数据的变化，当数据变化时触发关联的副作用函数来更新 DOM，从而实现界面的更新。
+
 ## 2. 响应式函数的封装
 
 ```js
